# gst-automation

./: .gitignore  Dockerfile  LICENSE  README.md  TELEGRAM_DEPLOYMENT_GUIDE.md  TELEGRAM_FINAL_SUMMARY.md  TELEGRAM_IMPLEMENTATION_STATUS.md  TELEGRAM_INTEGRATION_GUIDE.md  TELEGRAM_QUICK_REFERENCE.md  _inspect_state.py  _inspect_state2.py  _tmp_print.py  celerybeat-schedule  client_master.xlsx  docker-compose.yml  pyproject.toml  telegram_probe.py
alembic/: env.py
alembic/versions/: 0001_foundation.py  0002_orchestration_core.py  0003_orchestration_hardening.py  0004_watchdog_anomalies.py  0005_browser_infra.py  0006_portal_framework.py  0007_stabilization_validation_ops.py  0008_empirical_stability_proving.py  0009_gst_readiness_persistence.py  0010_gst_observation_and_graphs.py  0011_client_master_onboarding.py  0012_email_delivery_audit.py  0013_hardening_exec_reports_and_selector_health.py  0014_client_config_onboarding_fields.py  0016_telegram_bot_integration.py  (+1 more)
data/: captcha_state.json  vault.json
deploy/: README.md
docs/: OPERATIONS.md  PRODUCTION_READINESS_CHECKLIST.md
tests/: test_archive.py  test_argparse_doctor_env_registration_unittest.py  test_browser_sandbox.py  test_doctor_schema.py  test_download_verifier.py  test_env_loading_migration_cli.py  test_fair_scheduler.py  test_folder_manager.py  test_fsm.py  test_hitl_channel.py  test_humanizer.py  test_import_integration.py  test_queue_router.py  test_real_site_policy.py  test_retry_engine.py  test_sanitize.py  test_selector_registry.py  test_selector_scoring.py  test_settings.py  test_telegram_integration.py  test_validation_portal.py
(+306 files in other folders)
